--- a/plugin.xml
+++ b/plugin.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
     id="com.danielcwilson.plugins.googleanalytics"
-    version="0.1.0">
+    version="0.1.2">
 	<engines>
 	    <engine name="cordova" version=">=3.0.0" />
 	</engines>
@@ -9,7 +9,7 @@
 	<description>Cordova (PhoneGap) Plugin to connect to the native Google's Universal Analytics SDK 3.0</description>
 	<author>Daniel C. Wilson</author>
 	<license>MIT License</license>
-	<js-module src="analytics.js" name="UniversalAnalytics">
+	<js-module src="www/analytics.js" name="UniversalAnalytics">
 		<clobbers target="analytics" />
 	</js-module>
 
@@ -20,11 +20,24 @@
 		 	</feature>
 		</config-file>
 
-		<header-file src="UniversalAnalyticsPlugin.h" />
-		<source-file src="UniversalAnalyticsPlugin.m" />
+		<header-file src="ios/UniversalAnalyticsPlugin.h" />
+		<source-file src="ios/UniversalAnalyticsPlugin.m" />
 		<framework src="SystemConfiguration.framework" />
 		<framework src="CoreData.framework" />
 		<framework src="AdSupport.framework" />
 		<framework src="libz.dylib" />
+	</platform>
+
+	<platform name="android">
+		<config-file target="res/xml/config.xml" parent="/*">
+			<feature name="UniversalAnalytics">
+		    	<param name="android-package" value="com.danielcwilson.plugins.analytics.UniversalAnalyticsPlugin" />
+		 	</feature>
+		</config-file>
+        <config-file target="AndroidManifest.xml" parent="/*">
+            <uses-permission android:name="android.permission.INTERNET" />
+            <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+        </config-file>
+		<source-file src="android/UniversalAnalyticsPlugin.java" target-dir="src/com/danielcwilson/plugins/analytics" />
 	</platform>
 </plugin>
