--- a/plugin.xml
+++ b/plugin.xml
@@ -24,17 +24,18 @@
 		<source-file src="ios/UniversalAnalyticsPlugin.m" />
 
 		<source-file src="ios/libGoogleAnalyticsServices.a" framework="true" />
-        <header-file src="ios/GAIDictionaryBuilder.h" />
-        <header-file src="ios/GAIFields.h" />
-        <header-file src="ios/GAILogger.h" />
-        <header-file src="ios/GAITrackedViewController.h" />
-        <header-file src="ios/GAI.h" />
-        <header-file src="ios/GAITracker.h" />
+    <header-file src="ios/GAIDictionaryBuilder.h" />
+    <header-file src="ios/GAIFields.h" />
+    <header-file src="ios/GAILogger.h" />
+    <header-file src="ios/GAITrackedViewController.h" />
+    <header-file src="ios/GAI.h" />
+    <header-file src="ios/GAITracker.h" />
 
 		<framework src="SystemConfiguration.framework" />
 		<framework src="CoreData.framework" />
 		<framework src="AdSupport.framework" />
 		<framework src="libz.dylib" />
+		<framework src="libsqlite3.0.dylib" />
 	</platform>
 
 	<platform name="android">
@@ -43,10 +44,10 @@
 		    	<param name="android-package" value="com.danielcwilson.plugins.analytics.UniversalAnalyticsPlugin" />
 		 	</feature>
 		</config-file>
-        <config-file target="AndroidManifest.xml" parent="/*">
-            <uses-permission android:name="android.permission.INTERNET" />
-            <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-        </config-file>
+    <config-file target="AndroidManifest.xml" parent="/*">
+        <uses-permission android:name="android.permission.INTERNET" />
+        <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    </config-file>
 		<source-file src="android/UniversalAnalyticsPlugin.java" target-dir="src/com/danielcwilson/plugins/analytics" />
 		<source-file src="android/libGoogleAnalyticsServices.jar" target-dir="libs" />
 	</platform>
