Rename 'analytics' global to 'ga'
To be more consistent with how the web tracker works, and to avoid
conflicts when using the segment.io/analytics.js library at the same
time, I've renamed the global object used by the plugin from 'analytics'
to 'ga', but left 'analytics' in for backwards compatibility.

--- a/plugin.xml
+++ b/plugin.xml
@@ -10,7 +10,9 @@
   <author>Daniel C. Wilson</author>
   <license>MIT License</license>
   <js-module src="www/analytics.js" name="UniversalAnalytics">
+    <!-- 'analytics' is deprecated, but supported to ease the transition -->
     <clobbers target="analytics" />
+    <clobbers target="ga" />
   </js-module>
 
   <platform name="ios">
