--- a/plugin.xml
+++ b/plugin.xml
@@ -6,7 +6,7 @@
     <engine name="cordova" version=">=3.0.0" />
   </engines>
   <name>Google Universal Analytics Plugin</name>
-  <description>Simple tracking (screens/events) for Google Analytics SDK 3.0 (iOS/Android)</description>
+  <description>Simple tracking (screens/events) for Google Analytics SDK 3.0 (iOS) and SDK 4.0 (Android)</description>
   <author>Daniel C. Wilson</author>
   <license>MIT License</license>
   <js-module src="www/analytics.js" name="UniversalAnalytics">
@@ -43,6 +43,8 @@
   </platform>
 
   <platform name="android">
+    <dependency id="com.google.playservices@19.0.0" />
+    
     <config-file target="res/xml/config.xml" parent="/*">
       <feature name="UniversalAnalytics">
         <param name="android-package" value="com.danielcwilson.plugins.analytics.UniversalAnalyticsPlugin" />
@@ -53,6 +55,5 @@
       <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     </config-file>
     <source-file src="android/UniversalAnalyticsPlugin.java" target-dir="src/com/danielcwilson/plugins/analytics" />
-    <source-file src="android/libGoogleAnalyticsServices.jar" target-dir="libs" />
   </platform>
 </plugin>
