--- a/plugin.xml
+++ b/plugin.xml
@@ -44,7 +44,7 @@
   </platform>
 
   <platform name="android">
-    <framework src="com.google.android.gms:play-services-plus:+" />
+    <framework src="com.google.android.gms:play-services-analytics:+" />
 
     <config-file target="res/xml/config.xml" parent="/*">
       <feature name="UniversalAnalytics">
