--- a/plugin.xml
+++ b/plugin.xml
@@ -44,7 +44,7 @@
   </platform>
 
   <platform name="android">
-    <framework src="com.google.android.gms:play-services-analytics:+" />
+    <framework src="extras/google/google_play_services/libproject/google-play-services_lib" />
 
     <config-file target="res/xml/config.xml" parent="/*">
       <feature name="UniversalAnalytics">
@@ -54,6 +54,23 @@
     <config-file target="AndroidManifest.xml" parent="/*">
       <uses-permission android:name="android.permission.INTERNET" />
       <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+      <uses-permission android:name="android.permission.WAKE_LOCK" />
+    </config-file>
+    <config-file target="AndroidManifest.xml" parent="/manifest/application">
+      <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
+      <receiver android:enabled="true" android:name="com.google.android.gms.analytics.AnalyticsReceiver">
+          <intent-filter>
+              <action android:name="com.google.android.gms.analytics.ANALYTICS_DISPATCH" />
+          </intent-filter>
+      </receiver>
+      <service android:enabled="true" android:exported="false" android:name="com.google.android.gms.analytics.AnalyticsService" />
+      <receiver android:name="com.google.android.gms.analytics.CampaignTrackingReceiver"
+                android:exported="true">
+        <intent-filter>
+          <action android:name="com.android.vending.INSTALL_REFERRER" />
+        </intent-filter>
+      </receiver>
+      <service android:name="com.google.android.gms.analytics.CampaignTrackingService" />
     </config-file>
     <source-file src="android/UniversalAnalyticsPlugin.java" target-dir="src/com/danielcwilson/plugins/analytics" />
   </platform>
