Add campaign measurement tracking

--- a/plugin.xml
+++ b/plugin.xml
@@ -25,6 +25,7 @@
     <header-file src="ios/UniversalAnalyticsPlugin.h" />
     <source-file src="ios/UniversalAnalyticsPlugin.m" />
     <source-file src="ios/libGoogleAnalyticsServices.a" framework="true" />
+    <source-file src="ios/libAdIdAccess.a" framework="true" />
     <header-file src="ios/GAIDictionaryBuilder.h" />
     <header-file src="ios/GAIFields.h" />
     <header-file src="ios/GAILogger.h" />
@@ -38,6 +39,7 @@
 
     <framework src="SystemConfiguration.framework" />
     <framework src="CoreData.framework" />
+    <framework src="AdSupport.framework" />
     <framework src="libz.dylib" />
     <framework src="libsqlite3.dylib" />
   </platform>
@@ -62,12 +64,12 @@
         </intent-filter>
       </receiver>
       <service android:name="com.google.android.gms.analytics.AnalyticsService" android:enabled="true" android:exported="false"/>
-      <receiver android:name="com.google.android.gms.analytics.CampaignTrackingReceiver" android:exported="true">
+      <receiver android:name="com.google.android.gms.analytics.CampaignTrackingReceiver" android:enabled="true" android:exported="true">
         <intent-filter>
           <action android:name="com.android.vending.INSTALL_REFERRER" />
         </intent-filter>
       </receiver>
-      <service android:name="com.google.android.gms.analytics.CampaignTrackingService" />
+      <service android:name="com.google.android.gms.analytics.CampaignTrackingService" android:enabled="true" android:exported="false"/>
     </config-file>
     <source-file src="android/UniversalAnalyticsPlugin.java" target-dir="src/com/danielcwilson/plugins/analytics" />
   </platform>
