comment more libs

--- a/plugin.xml
+++ b/plugin.xml
@@ -49,11 +49,11 @@
     <header-file src="ios/GAIEcommerceProductAction.h" />
     <header-file src="ios/GAIEcommercePromotion.h" />-->
 
-    <framework src="SystemConfiguration.framework" />
+    <!--<framework src="SystemConfiguration.framework" />
     <framework src="CoreData.framework" />
     <framework src="AdSupport.framework" />
     <framework src="libz.dylib" />
-    <framework src="libsqlite3.dylib" />
+    <framework src="libsqlite3.dylib" />-->
   </platform>
 
   <platform name="android">
