added platforms "windows" and "browser" to cordova.platforms array.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "id": "cordova-plugin-google-analytics",
     "platforms": [
       "android",
-      "ios"
+      "ios",
+      "windows",
+      "browser"
     ]
   },
   "repository": {
