--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/danwilson/google-analytics-plugin.git"
+    "url": "git+https://github.com/danwilson/google-analytics-plugin.git"
   },
   "keywords": [
     "cordova",
