👾Include types declaration in package.json

--- a/package.json
+++ b/package.json
@@ -27,5 +27,6 @@
     "universalanalytics"
   ],
   "author": "Dan Wilson",
-  "license": "MIT"
+  "license": "MIT",
+  "types": "./typescript/analytics.d.ts"
 }
