--- a/plugin.xml
+++ b/plugin.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
-  xmlns:android="http://schemas.android.com/apk/res/android" id="cordova-plugin-google-analytics" version="1.9.1">
+  xmlns:android="http://schemas.android.com/apk/res/android" id="cordova-plugin-google-analytics" version="1.9.2">
   <engines>
     <engine name="cordova" version=">=3.0.0" />
   </engines>
@@ -65,7 +65,7 @@
     </config-file>
     <!-- Add support for devices without Google Play Services installed. -->
     <config-file target="AndroidManifest.xml" parent="/manifest/application">
-      <receiver android:name="com.google.android.gms.analytics.AnalyticsReceiver" android:exported="true" android:enabled="true">
+      <receiver android:name="com.google.android.gms.analytics.AnalyticsReceiver" android:enabled="true">
         <intent-filter>
           <action android:name="com.google.android.gms.analytics.ANALYTICS_DISPATCH" />
         </intent-filter>
